--- a/index.html
+++ b/index.html
@@ -1137,9 +1137,9 @@
     <!-- <script type="text/javascript" src="lib/tilt.jquery.min.js"></script>
     <script type="text/javascript" src="lib/select2.js"></script> -->
 
-    <script type="text/javascript" src="lib/ScrollMagic.min.js"></script>
+    <!-- <script type="text/javascript" src="lib/ScrollMagic.min.js"></script>
     <script type="text/javascript" src="lib/animation.gsap.min.js"></script>
-    <script type="text/javascript" src="lib/debug.addIndicators.min.js"></script>
+    <script type="text/javascript" src="lib/debug.addIndicators.min.js"></script> -->
     <script type="text/javascript" src="lib/TweenMax.min.js"></script>
     <script type="text/javascript" src="lib/erayTools.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
